--- a/level-select.html
+++ b/level-select.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <title>Select Level</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -26,7 +26,7 @@
             </button>
             
             <button class="level-btn pro" data-level="pro">
-                <span class="level-title">PRO</span>
+                <span class="level-title">EXPERT</span>
                 <span class="level-desc">7 Letter Words</span>
             </button>
         </div>
